[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/MainMenu/Stage2LevelSelect/Stage2LevelSelect.gd" type="Script" id=1]

[node name="LevelSelect" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 883.0
margin_top = 509.0
margin_right = 1037.0
margin_bottom = 571.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="Button" parent="HBoxContainer"]
margin_right = 40.0
margin_bottom = 62.0
text = "prev"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 44.0
margin_right = 110.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 66.0
margin_bottom = 20.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 66.0
margin_bottom = 38.0
text = "First Level"

[node name="Back" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 66.0
margin_bottom = 62.0
text = "Back"

[node name="Next" type="Button" parent="HBoxContainer"]
margin_left = 114.0
margin_right = 154.0
margin_bottom = 62.0
text = "next"

[connection signal="pressed" from="HBoxContainer/Prev" to="." method="prev_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Start" to="." method="start_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Back" to="." method="emit_signal" binds= [ "back" ]]
[connection signal="pressed" from="HBoxContainer/Next" to="." method="next_button_pressed"]
